2004-01-19  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* shapeid.cc: don't corrupt game palette to get special colours
	* palette.*, various: replaced update() by apply(false)

2004-01-18  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* game.*: added Game::has_expansion() to check for FoV/SS
	* objnames.cc: fixed SI-without-SS object names
	* files/utils.cc: made U7remove() case-insensitive
	* various: cleaning up output
	* CombatOptions_gump.cc: made buttons wide enough for text
	* various: added config/debug/trace/combat option to enable combat msgs

2004-01-17  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gamewin.cc: fix check for original gamedat
	* various: cleaned up some output

2004-01-17  Ryan Nunn  <colourles@users.sourceforge.net>
	* audio/midi_drivers/fmopldrv.cc : 'Fixing' hanging note problem

2004-01-17  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* files/utils.cc: make sure path_map contains no invalid/empty entries
	* audio/Audio.cc: use Mix_GetError after Mix_OpenAudio
	* fmopldrv.cc: don't crash if u7voice.flx not found
	* exult.cc: always load BG/SI paths
	* shapeid.cc: use SERPENTISLE_STATIC instead of SERPENT_STATIC

2004-01-10    <jeff@mini.nerble.net>

	* gamemap.cc: create_ifix_object() added to create the right type
	of object.
	* files/utils.cc: Clone_system_path should check that entry
	exists.
	* exult.cc: Always set <PATCH>, defaulting to datadir/patch.

2004-01-06    <jeff@mini.nerble.net>

	* usecode/intrinsics.cc: Yet another intrinsic:  set_barge_dir().

2004-01-03    <jeff@mini.nerble.net>

	* gamerend.cc,chunks.cc:  Handle dungeons slightly differently to
	avoid black squares in SI Sunrise Isle area.  I'm assuming a
	certain shape (941 with frame 0) means "whole chunk is dungeon".

2004-01-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc, *game.cc: cleared up startup output a bit
	* audio/Midi.cc: show errors when unable to find .ogg files